app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rupbot
  name: rupbot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rupbot
  template:
    metadata:
      labels:
        app: rupbot
    spec:
      containers:
      - image: mdshajib/rupbot:latest
        imagePullPolicy: IfNotPresent
        name: rupbot
        resources:
          requests:
            cpu: 500m
            memory: "128Mi"
          limits:
            cpu: "1"  
            memory: "256Mi"
        ports:
        - containerPort: 9000
          name: rupbot
          protocol: TCP
        volumeMounts:
        - mountPath: /var/www/html/storage/logs
          name: logs
        - mountPath: /var/www/html/storage/framework/views
          name: views
        - mountPath: /var/www/html/storage/framework/cache
          name: cache
        - mountPath: /var/www/html/storage/framework/sessions
          name: sessions
      volumes:
      - name: logs
        emptyDir: {}
      - name: views
        emptyDir: {}
      - name: cache
        emptyDir: {}
      - name: sessions
        emptyDir: {}
