nginx_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rupbot-nginx-deployment
  labels:
    app: rupbot-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rupbot-nginx
  template:
    metadata:
      labels:
        app: rupbot-nginx
    spec:
      containers:
      - name: rupbot-nginx
        image: nginx:1.25.3-alpine-slim
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/httpd.d
        ports:
        - containerPort: 80
          protocol: TCP
      volumes:
        - name: config
          configMap:
            name: rupbot-nginx-config
            items:
            - key: config
              path: site.conf
