app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rupbot-service
spec:
  ports:
  - port: 9000
  selector:
    app: rupbot
